--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 --extra-index-url https://pypi.nvidia.com
-accelerate==0.25.0
+accelerate
 build
 colored
-cuda-python # Do not override the custom version of cuda-python installed in the NGC PyTorch image.
-diffusers==0.15.0
+diffusers
 lark
 mpi4py
 numpy
@@ -16,9 +15,7 @@ pandas
 h5py
 sentencepiece>=0.1.99
 tensorrt==9.3.0.post12.dev1
-torch>=2.1.0a,<=2.2.0a # https://github.com/pytorch/pytorch/blob/v2.1.2/version.txt still uses 2.1.0a0.
 nvidia-ammo~=0.7.0; platform_machine=="x86_64"
-transformers==4.38.2
 wheel
 optimum
 evaluate
