--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,8 @@ pulp
 pandas
 h5py
 sentencepiece>=0.1.99
-tensorrt==9.3.0.post12.dev1
-nvidia-ammo~=0.7.0; platform_machine=="x86_64"
+tensorrt
+nvidia-ammo
 wheel
 optimum
 evaluate
